# tidydag

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/tidydag/: __init__.py
src/tidydag/node/: __init__.py  base.py
src/tidydag/orchestrator/: __init__.py
tests/assets/: app_valid.yaml  app_wrong_pool_size.yaml  server_with_retries.yaml  server_wrong_port_type.yaml
tests/unit/: test_node.py  test_node_configuration.py  test_orchestrator.py  test_orchestrator_async.py
