[project]
name = "tidydag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Guillermo Fernandez", email = "guillermo.fernandez@taidy.io" }
]
dependencies = [
  "asyncio>=4.0.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM108"]

[tool.ty.environment]
python = ".venv"
